# cadora

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  run_report.md
.github/workflows/: ci.yml
cadora/: __init__.py  accounts.py  aidlc_v2.py  archive.py  budget.py  cli.py  compare.py  deliverable.py  doctor.py  evaluate.py  gates.py  integrity.py  park.py  preflight.py  provenance.py  remediation.py  report.py  review.py  runner.py  signing.py  telemetry.py  topology.py  usage.py  workspace.py
cadora/aidlc_rules/: RULES_VERSION
cadora/dashboard/: __init__.py  server.py
cadora/dashboard/static/: __init__.py  app.js  index.html  style.css
cadora/executors/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  fixture.py  glm.py  kiro.py
cadora/frontends/: __init__.py  quick_review.py
cadora/mcp/: __init__.py  auth.py  channel.py  server.py  session.py
docs/: ARCHITECTURE.md  analyst-frontend.md  dashboard.md  demo-script-5min.md  experimental-openwork.md  funding-and-billing-2026-07.md  getting-started-deck.html  getting-started.md  hackathon-quickstart.md  hitl-mcp.md  index.html  verification-gates.md  vision.md  visualization.md
docs/diagrams/: README.md
docs/user-journeys/: README.md
docs/user-journeys/aidlc-method/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/compare-evaluate/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/cost-finops/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/deliverable-pack/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/evidence-pack/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/gates-and-integrity/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/human-review/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/journey-first-builds/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/mcp-server/: design-spec.html  user-journey.html  user-manual.md
docs/user-journeys/multi-backend/: design-spec.html  user-journey.html  user-manual.md
examples/: README.md  agentcore-deploy.topology.yaml  aidlc-hitl.topology.yaml  aidlc-phased.topology.yaml  aidlc-stages.topology.yaml  aidlc.topology.yaml  analyst-frontend.topology.yaml  claude-code.mcp.json  design-wave.topology.yaml  fan-in-aggregation.topology.yaml  hackathon-hello.vision.md  mission-prep.topology.yaml  parallel-fanout.topology.yaml  sequential-pipeline.topology.yaml
tests/: conftest.py  test_accounts.py  test_aidlc_v2.py  test_antigravity.py  test_archive.py  test_budget.py  test_claude_executor.py  test_codex_executor.py  test_compare.py  test_conductor_provenance.py  test_dashboard.py  test_dashboard_review.py  test_deliverable.py  test_doctor.py  test_evaluate.py  test_examples.py  test_executor_errors.py  test_fixture_executor.py  test_gate_check.py  test_gates.py  test_glm_executor.py  test_hitl.py  test_hitl_duration.py  test_hitl_mcp_hardening.py  test_hitl_phase1_coverage.py  test_integrity.py  test_kiro_executor.py  test_mcp.py  test_mcp_auth.py  test_mcp_server.py  test_mobile_triage.py  test_park_and_exit.py  test_phase_routing.py  test_preflight.py  test_quick_frontend.py  test_quick_mcp_client.py  test_remediation.py  test_report.py  test_resume.py  test_resume_cost_continuity.py  (+13 more)
tests/fixtures/: claude_stream_success.jsonl
(+10 files in other folders)
