[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadora"
version = "0.8.1"
description = "Ship agent-built software you can prove — an audit-grade conductor for coding-agent CLIs (Claude Code, Codex): deterministic gates, tamper detection, run evidence, per-node cost attribution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yves Eychenne", email = "yeychenne@yahoo.fr" }]
keywords = ["agents", "verification", "governance", "audit", "finops", "claude-code", "codex", "ai-dlc", "dag", "workflow"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff"]
mcp = ["mcp>=1.2"]
deliverable = ["python-docx>=1.1"]

[project.scripts]
cadora = "cadora.cli:main"

[project.urls]
Homepage = "https://github.com/yeychenne/cadora"
Repository = "https://github.com/yeychenne/cadora"

[tool.hatch.build.targets.wheel]
packages = ["cadora"]

[tool.hatch.build.targets.sdist]
# ALLOWLIST — only the files listed below ship in the PyPI source distribution. Hatchling's VCS
# default would otherwise ship every tracked file, including internal planning and design docs.
# Anything not listed here is excluded.
include = [
  "/cadora",
  "/examples",
  "/tests",
  "/docs",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/docs/DESIGN.md",
  "/docs/design",
]

[tool.ruff]
line-length = 100
target-version = "py310"
